<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".activity.FamousPlacesActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/famous_places"
        android:scaleType="centerCrop"
        android:src="@drawable/famous_places_gvp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/About_GVP"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Address_GVP"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/openingHours"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/openStatus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnGetDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="@string/get_directions"
                android:textColor="@color/bgColor"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>