<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".activity.FamousPlacesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/famous_places"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewGateway"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_gateway_of_india" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/gateway_of_india"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cardViewSVTemple"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_siddhi_vinayak_temple" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/shree_siddhivinayak_temple"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cardViewCSMT"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_csmt" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/CSMT"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cardViewSGNP"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_sgnp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/sgnp"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cardViewGVP"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_gvp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/GVP"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cardViewCSMTVS"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_csmtvs" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/CSMTVS"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewKC"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:contentDescription="@string/famous_food"
                        android:scaleType="centerCrop"
                        android:src="@drawable/famous_places_kanher_caves" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/kanheri_caves"
                        android:textAlignment="center"
                        android:textColor="@color/bgColor"
                        android:textSize="@dimen/_18sdp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>